[gd_scene load_steps=6 format=2]

[ext_resource path="res://scripts/main.gd" type="Script" id=1]
[ext_resource path="res://scenes/player.tscn" type="PackedScene" id=2]
[ext_resource path="res://audio/Red_Glowing_Dust.mp3" type="AudioStream" id=4]
[ext_resource path="res://art/black_hole1.png" type="Texture" id=5]
[ext_resource path="res://scenes/HUD.tscn" type="PackedScene" id=6]

[node name="main" type="Node"]
pause_mode = 1
script = ExtResource( 1 )

[node name="Node" type="Node" parent="."]

[node name="Sprite" type="Sprite" parent="Node"]
position = Vector2( 964, 541 )
scale = Vector2( 1.14899, 0.905 )
texture = ExtResource( 5 )

[node name="player" parent="." instance=ExtResource( 2 )]
position = Vector2( 967, 549 )

[node name="spawn_locations" type="Node" parent="."]

[node name="0" type="Position2D" parent="spawn_locations"]
position = Vector2( 959, 66 )

[node name="1" type="Position2D" parent="spawn_locations"]
position = Vector2( 1858, 66 )

[node name="2" type="Position2D" parent="spawn_locations"]
position = Vector2( 961, 1024 )

[node name="3" type="Position2D" parent="spawn_locations"]
position = Vector2( 66, 1027 )

[node name="4" type="Position2D" parent="spawn_locations"]
position = Vector2( 68, 65 )

[node name="5" type="Position2D" parent="spawn_locations"]
position = Vector2( 1862, 1022 )

[node name="6" type="Position2D" parent="spawn_locations"]
position = Vector2( 1859, 577 )

[node name="7" type="Position2D" parent="spawn_locations"]
position = Vector2( 65, 579 )

[node name="asteroid_container" type="Node" parent="."]

[node name="music" type="Node" parent="."]

[node name="backmusic1" type="AudioStreamPlayer2D" parent="music"]
position = Vector2( 4, 2 )
stream = ExtResource( 4 )
volume_db = 24.0
attenuation = 8.28211

[node name="HUD" parent="." instance=ExtResource( 6 )]

[node name="restart_timer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[node name="enemy_timer" type="Timer" parent="."]

[connection signal="pickup" from="player" to="." method="_on_player_pickup"]
[connection signal="timeout" from="restart_timer" to="." method="_on_restart_timer_timeout"]
[connection signal="timeout" from="enemy_timer" to="." method="_on_enemy_timer_timeout"]
